tests/operator/add_bools.rev
true + false // error: operator '+' is not supported for operations on bool type